plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.38'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    // Include resources generated by data generators.
    srcDir('src/generated/resources')

    // Exclude common development only resources from finalized outputs
    exclude("**/*.bbmodel") // BlockBench project files
    exclude("src/generated/**/.cache") // datagen cache files
}

repositories {
    // FTB mods (Teams hard dependency; Ultimine/Mekanism are detected at runtime and never linked).
    maven {
        name = 'FTB'
        url = 'https://maven.ftb.dev/releases'
        content {
            includeGroup 'dev.ftb.mods'
        }
    }
}

base {
    archivesName = mod_id
}

// Mojang ships Java 25 to end users in 26.1, so mods target Java 25.
java.toolchain.languageVersion = JavaLanguageVersion.of(25)

// Access transformers: dynamic per-team dimension creation needs the server's
// executor and level storage access.
minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

// Default run configurations.
runs {
    configureEach {
        // Recommended logging data for a userdev environment
        systemProperty 'forge.logging.markers', 'REGISTRIES'

        // Recommended logging level for the console
        systemProperty 'forge.logging.console.level', 'debug'

        workingDirectory project.layout.projectDirectory.dir('run').dir(name)

        modSource project.sourceSets.main
    }

    client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        argument '--nogui'
    }

    gameTestServer {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    clientData {
        arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

// Sets up a dependency configuration called 'localRuntime'.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // NeoForge 26.1 (stable, pinned 2026-08-26).
    implementation "net.neoforged:neoforge:${neo_version}"

    // Hard dependency: FTB Teams (pulls FTB Library transitively).
    implementation "dev.ftb.mods:ftb-teams-neoforge:${ftb_teams_version}"

    // Soft dependencies — compile against their APIs so integration code can reference event
    // classes directly, but nothing is published or loaded unless the mod is actually present.
    // Runtime-only presence is detected via ModList at runtime.
    compileOnly "dev.ftb.mods:ftb-ultimine-neoforge:${ftb_ultimine_version}"
    // Mekanism: no compile-time reference at all — integration is tag-based per the design spec.

    // JUnit for pure-logic unit tests (OreClassifier rules, later [72] suites).
    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

// This block of code expands all declared replace properties in the specified resource targets.
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_group_id           : mod_group_id,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            ftb_teams_version      : ftb_teams_version,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
